@@ -2,6 +2,13 @@ aptosid-art-legacy (2011.03.10) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
 
+  [ Roland Engert ]
+  * parallelize build system for geras to the maximum.
+
+  [ Stefan Lippers-Hollmann ]
+  * geras: fix dm-kdm/
+  * geras: fix splash-kde/
+
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Aug 2012 23:37:38 +0200
 
 aptosid-art-legacy (2011.03.9) unstable; urgency=low
